[package]
name = "cold_brew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "76ec709edee77c28a4a027ff1ab8d768be523633", features = ["dynamic"] }

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }